dsp-cli/tests/snapshots/data_model_describe_snapshots__data_model_describe_csv_empty_stderr.snap
---
source: tests/data_model_describe_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on https://api.dasch.swiss]
