dsp-cli/tests/snapshots/data_model_describe_snapshots__data_model_describe_csv_empty_stdout.snap
---
source: tests/data_model_describe_snapshots.rs
expression: stdout
---
name,iri,label,last_modified,resource_types
minimal,http://api.dasch.swiss/ontology/0000/minimal/v2,,,0
