dsp-cli/tests/snapshots/data_model_describe_snapshots__data_model_describe_json_empty.snap
---
source: tests/data_model_describe_snapshots.rs
expression: out
---
{"_meta":{"server":"https://api.dasch.swiss","auth":"anonymous","exit_code":0},"data":{"name":"minimal","iri":"http://api.dasch.swiss/ontology/0000/minimal/v2","label":null,"last_modified":null,"resource_types":[]}}
