dsp-cli/tests/snapshots/data_model_describe_snapshots__data_model_describe_lines_stdout.snap
---
source: tests/data_model_describe_snapshots.rs
expression: buf_to_string(&out_buf)
---
beol	http://api.dasch.swiss/ontology/0801/beol/v2
